# adipo

./: .bazelrc  .gitignore  .goreleaser.yaml  AGENTS.md  BAZEL.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  GORELEASER_MIGRATION.md  HWCAPS.md  HWCAPS_EXEC.md  LIBRARY_PATHS.md  LICENSE  LICENSE-3rdparty.csv  MODULE.bazel  Makefile  Makefile.new  Makefile.old  NOTICE  README.md  RELEASE.md  TECHNICAL.md  TODO.md  WORKSPACE  go.mod  go.sum
.claude_code/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-goreleaser.yaml  release.yml
bazel/: BUILD.bazel  adipo.bzl  workspace_status.sh
cmd/adipo/: BUILD.bazel  analyze.go  cpu.go  create.go  detect-cpu.go  extract.go  inspect.go  main.go  run.go
cmd/adipo-stub/: BUILD.bazel  main.go
cmd/hwcaps-exec/: BUILD.bazel  main.go
docs/: COMPRESSION_OPTIMIZATION.md
examples/: README.md
examples/c_hello/: BUILD.bazel  README.md  hello.c
examples/go_hello/: BUILD.bazel  README.md  main.go
internal/analyzer/: BUILD.bazel  analyzer.go  arm64_features.go  capstone.go  capstone_stub.go  disassembler.go  disassembler_test.go  march.go  statistics.go  x86_features.go
internal/compression/: BUILD.bazel  compression.go  gzip.go  lz4.go  none.go  zstd.go
internal/cpu/: BUILD.bazel  aliases.go  arm64.go  arm64_stub.go  capabilities.go  capabilities_test.go  cpumodel.go  detect.go  features.go  x86_64.go  x86_64_stub.go
internal/elf/: BUILD.bazel  analyzer.go  validator.go
internal/extractor/: BUILD.bazel  disk.go  executor.go  extractor.go  memory.go  memory_stub.go  template.go
internal/features/: BUILD.bazel  bits.go  names.go
internal/format/: BUILD.bazel  detector.go  format_test.go  header.go  header_test.go  reader.go  spec.go  spec_test.go  writer.go
internal/hwcaps/: BUILD.bazel  scanner.go  scanner_test.go  selector.go  template.go  template_integration_test.go  template_test.go  templates.go
internal/macho/: BUILD.bazel  analyzer.go  validator.go
internal/runner/: BUILD.bazel  runner.go  runner_test.go
internal/selector/: BUILD.bazel  matcher.go  matcher_test.go  scorer.go  scorer_test.go  selector.go  selector_test.go
internal/stub/: BUILD.bazel  embed.go
stub/: BUILD.bazel  main.go
