load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/DataDog/adipo
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Generate the embedded stub at the root level
genrule(
    name = "generate_stub",
    srcs = ["//cmd/adipo-stub:adipo-stub"],
    outs = ["stub.bin"],
    cmd = "cp $(location //cmd/adipo-stub:adipo-stub) $@",
    visibility = ["//visibility:public"],
)
