"""Adipo - Architecture-Aware Fat Binaries"""

module(
    name = "adipo",
    version = "0.0.1",
)

# Go SDK
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Platforms for C/C++ cross-compilation
bazel_dep(name = "platforms", version = "0.0.10")

# Go dependencies
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Explicit use_repo declarations for bzlmod
use_repo(
    go_deps,
    "com_github_clipperhouse_displaywidth",
    "com_github_clipperhouse_stringish",
    "com_github_clipperhouse_uax29_v2",
    "com_github_fatih_color",
    "com_github_inconshreveable_mousetrap",
    "com_github_klauspost_compress",
    "com_github_mattn_go_colorable",
    "com_github_mattn_go_isatty",
    "com_github_mattn_go_runewidth",
    "com_github_olekukonko_cat",
    "com_github_olekukonko_errors",
    "com_github_olekukonko_ll",
    "com_github_olekukonko_tablewriter",
    "com_github_pierrec_lz4_v4",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "in_gopkg_yaml_v3",
    "org_golang_x_sys",
)
