load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stub_lib",
    srcs = ["main.go"],
    importpath = "github.com/corentin-chary/adipo/stub",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/compression",
        "//internal/cpu",
        "//internal/extractor",
        "//internal/format",
        "//internal/selector",
    ],
)

go_binary(
    name = "stub",
    embed = [":stub_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
