load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "adipo-stub_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/adipo/cmd/adipo-stub",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/compression",
        "//internal/cpu",
        "//internal/extractor",
        "//internal/format",
        "//internal/runner",
        "//internal/selector",
    ],
)

go_binary(
    name = "adipo-stub",
    embed = [":adipo-stub_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
