load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "adipo_lib",
    srcs = [
        "analyze.go",
        "cpu.go",
        "create.go",
        "detect-cpu.go",
        "extract.go",
        "inspect.go",
        "main.go",
        "run.go",
    ],
    importpath = "github.com/DataDog/adipo/cmd/adipo",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/analyzer",
        "//internal/compression",
        "//internal/cpu",
        "//internal/elf",
        "//internal/extractor",
        "//internal/format",
        "//internal/hwcaps",
        "//internal/macho",
        "//internal/runner",
        "//internal/selector",
        "@com_github_olekukonko_tablewriter//:tablewriter",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "adipo",
    embed = [":adipo_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.commit": "{STABLE_COMMIT}",
        "main.date": "{STABLE_DATE}",
    },
)
