load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hwcaps-exec_lib",
    srcs = ["main.go"],
    importpath = "github.com/DataDog/adipo/cmd/hwcaps-exec",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cpu",
        "//internal/extractor",
        "//internal/hwcaps",
        "//internal/runner",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "hwcaps-exec",
    embed = [":hwcaps-exec_lib"],
    visibility = ["//visibility:public"],
)
