load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "compression",
    srcs = [
        "compression.go",
        "gzip.go",
        "lz4.go",
        "none.go",
        "zstd.go",
    ],
    importpath = "github.com/corentin-chary/adipo/internal/compression",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/format",
        "@com_github_klauspost_compress//zstd",
        "@com_github_pierrec_lz4_v4//:lz4",
    ],
)
