load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "selector",
    srcs = [
        "matcher.go",
        "scorer.go",
        "selector.go",
    ],
    importpath = "github.com/DataDog/adipo/internal/selector",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cpu",
        "//internal/format",
    ],
)

go_test(
    name = "selector_test",
    srcs = [
        "matcher_test.go",
        "scorer_test.go",
        "selector_test.go",
    ],
    embed = [":selector"],
    deps = [
        "//internal/cpu",
        "//internal/format",
    ],
)
