load("@rules_go//go:def.bzl", "go_library")

# Create a filegroup for the stub binary
filegroup(
    name = "stub_binary",
    srcs = ["//:generate_stub"],
    visibility = ["//visibility:public"],
)

# Generate stub_generated.go from the stub binary
genrule(
    name = "generate_stub_go",
    srcs = ["//stub:stub"],
    outs = ["stub_generated.go"],
    cmd = """
    STUB_BIN=$(location //stub:stub)
    OUTPUT=$@

    # Start the Go file
    printf 'package stub\\n\\nfunc init() {\\n\\tStubBinary = []byte{' > $$OUTPUT

    # Convert binary to hex bytes
    od -An -tx1 -v $$STUB_BIN | tr -d ' \\n' | sed 's/../0x&,/g' | sed 's/,$$//' >> $$OUTPUT

    # Close the function
    printf '}\\n}\\n' >> $$OUTPUT
    """,
    visibility = ["//visibility:private"],
)

go_library(
    name = "stub",
    srcs = [
        "embed.go",
        ":generate_stub_go",
    ],
    importpath = "github.com/DataDog/adipo/internal/stub",
    visibility = ["//:__subpackages__"],
)
